--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 @import '../../common/colors.scss';
 
 .header {
@@ -13,6 +14,7 @@
   color: $font-primary;
   font-size: 20px;
   font-weight: 600;
+  font-family: 'Ubuntu';
 }
 
 .user-image, .user-image img {
